add commands to header

--- a/header.tex
+++ b/header.tex
@@ -133,4 +133,6 @@ urlcolor=[rgb]{.09 .29 .54}}
 \def\hier{\mathrm{Hier}}
 \def\Vertex{\mathrm{Vertex}}
 \def\adj{\mathrm{adj}}
+\def\wprod{\mathbf{wp}}
+\def\length{\mathbf{len}}
 %% END MACROS SECTION
