add stability figure and combined stability regions figure

--- a/paper.tex
+++ b/paper.tex
@@ -404,12 +404,12 @@ d & c
 \end{pmatrix} \textrm{stable } \right) = \frac{\int_{{{{a'c>bd \atop a' + c < 0} \atop ac>bd} \atop a+c<0} \atop H^5} da\,db\,dc\,dd\,da'\,1}{\int_{H^5} da\,db\,dc\,dd\,da'\,1}.
 \end{align*}
 
-The probability of \emph{a priori} stability and of stability to perturbations for all two component systems is given in Table \ref{tab:structstabmat}. Similarly, the analogous results for all three component systems is given in Table \ref{tab:structstabmat3}.
+The probability of \emph{a priori} stability and of stability to perturbations for all two component systems is given in Table \ref{tab:structstabmat}. Similarly, the analogous results for all three component systems is given in \ref{tab:structstabmat3} and \ref{fig:stab3x3}. It has been stated previously on the basis of simulation that system stability decreases with connectivity as the system size goes to infinity \cite{May1972}. For small system sizes such as the two and three component systems, studied here the situation is not so clear cut. For two component systems, system stability is constant across the entire range of connectivities. For three component systems, the trend is unclear as shown in \ref{fig:apstab3x3}.
 
 \todo{Say a few words about Monte Carlo integration and error bars.}
 
 \section{Connectivity is correlated with robustness}
-\ref{fig:stab3x3} shows the probability of stability to perturbations for all three component systems as a function of connectivity.
+The relationship between connectivity and probability of stability to perturbations for two component systems is shown in \ref{tab:structstabmat}. Likewise, \ref{fig:stab3x3} and \ref{tab:structstabmat3} show the probability of stability to perturbations for all three component systems as a function of connectivity.
 
 \section{Cycle number is inversely correlated with robustness}
 \ref{fig:cycle3x3} shows the probability of stability to perturbations for all three component systems as a function of the number of simple cycles (elementary circuits) of length greater than one in the corresponding directed graph \cite{Johnson1975}.
