--- a/paper.tex
+++ b/paper.tex
@@ -439,6 +439,9 @@ The relationship between connectivity and probability of stability to perturbati
 \section{Tables}
 \input{tex/table2x2stab}
 \input{tex/tablenographs}
+
+% \newpage
+
 % \input{tex/tablewithgraphs}
 
 \end{document}
