--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -1,1 +1,2 @@
-The analysis of dynamical systems that attempts to model chemical reaction, gene-regulatory, population, and ecosystem networks all rely on models having many parameters and thus many degrees of freedom. When the details of a system are unknown, one effective approach is to study the dynamical properties of a collection of models determined by constraints applying to all such systems. Here we analyze the stability of a large class of dynamical systems to perturbations in the underlying structure of the system: a property referred to as \emph{structural stability}. In particular, we precisely determine the probability distribution over system connectivity, a parameter which has significant implications from the study of gene-regulatory networks to ecosystem dynamics, of structural stability for systems with two and three interacting components. We show for these cases that structural stability has a non-monotonic relationship with system connectivity. We also demonstrate that networks with a hierarchical structure are more likely to be stable to perturbations than those with a more entangled heterarchical structure. These results support future work attempting to characterize the scaling relationship between structural stability and system connectivity. The latter investigation is necessary to evaluate several conjectured but ultimately untested hypotheses about biological networks.
+%!TEX root = ../paper.tex
+The analysis of dynamical systems that attempts to model chemical reaction, gene-regulatory, population, and ecosystem networks all rely on models having many degrees of freedom. When the details of a system are unknown, one effective approach is to study the dynamical properties of an ensemble of models determined by constraints applying to all such systems. Here we analyze the stability of a large class of dynamical systems to perturbations in the underlying structure of the system: a property referred to as \emph{structural stability}. In particular, we precisely determine the probability distribution of structural stability over system connectivity and cycle number, parameters that have significant implications from the study of metabolic to gene-regulatory to ecosystem network dynamics, for systems with two and three interacting components. We show that structural stability is classified by the number of links between strongly connected components of the graph representing the underlying system connectivity leading to the conclusion that the most stable systems are also the most hierarchical. This results in the classification of the dynaical robustness of biological networks based upon a purely topological property.
