--- a/paper.tex
+++ b/paper.tex
@@ -48,7 +48,7 @@ Here we build on work aimed at investigating the stability of randomly connected
 \section{Stability analysis of biological networks}\label{sec:stabanalbn}
 In the construction of a class of potential models for biological systems at any level of the biological hierarchy from metabolic to ecosystem-level networks, it is common to first attempt to define a collection of observable phenomena of interest and determine a domain (such as binary numbers, integers, or real numbers) in which each observable can be quantified. Next, it is necessary to establish the interdependencies among system components. The specific manner in which the components depend upon one another must be clarified, which is often done by determining a particular system of mathematical functions that represents a hypothesis about how the quantified observables evolve in time. To the degree to which there is uncertainty about the interactions among system components, parameters are introduced to broaden the class of models under consideration. Finally, whatever model class remains may be compared to empirical observations to determine how capable the model is of representing the phenomena of interest.
 
-For the case of continuous deterministic observables, the above process can be made more precise by associating a manifold $M_i$ to each observable, a directed graph $G$ to the interdependencies, and a vector field $V \in T(\prod_i M_i)$ over the space determined by taking the product of the manifolds associated to the collection of observables, satisfying these interdependencies for each observable  \cite{Deville}. For example, if we have two observables $\{x_1,x_2\}$ where the domains in which they are quantified are given by manifolds $\{M_1,M_2\}$ such that $x_1 \in M_1 \equiv \mathbb{R}^1$ and $x_2 \in M_2 \equiv \mathbb{R}^1$, a directed graph $G_X$ describing the dependencies between these observables and vector field $V$ with components $\{F_1,F_2\}$ defined on $M_1 \otimes M_2 \equiv \mathbb{R}^2$ satisfying the dependencies determined by $G_X$. If the system under consideration has the graph given in \ref{fig:examplesystemmodules}A
+For the case of continuous deterministic observables, the above process can be made more precise by associating a manifold $M_i$ to each observable, a directed graph $G$ to the interdependencies, and a vector field $V \in \Gamma T(\prod_i M_i)$ over the space determined by taking the product of the manifolds associated to the collection of observables, satisfying these interdependencies for each observable  \cite{Deville}. For example, if we have two observables $\{x_1,x_2\}$ where the domains in which they are quantified are given by manifolds $\{M_1,M_2\}$ such that $x_1 \in M_1 \equiv \mathbb{R}^1$ and $x_2 \in M_2 \equiv \mathbb{R}^1$, a directed graph $G_X$ describing the dependencies between these observables and vector field $V$ with components $\{F_1,F_2\}$ defined on $M_1 \otimes M_2 \equiv \mathbb{R}^2$ satisfying the dependencies determined by $G_X$. If the system under consideration has the graph given in \ref{fig:examplesystemmodules}A
 % \begin{center}
 % \input{tex/examplehamdyngraph}
 % \end{center}
@@ -109,7 +109,7 @@ $\mu' \colon S \times \mathcal{B}(S) \to [0,1]$.  Then, given a binary random
 variable $q$, we we define its robustness as the following conditional proability:
 \[
   \mathrm{Robust} (q) =
-  \frac{\int_S d\mu(x) \int_S d\mu'(y) \mathbf{1}_q(x) \mathbf{1}_q(y)}
+  \frac{\int_S d\mu(x) \int_S d\mu'(x,y) \mathbf{1}_q(x) \mathbf{1}_q(y)}
   {\int_S d\mu(x) \mathbf{1}_q(x)}
 \]
 
@@ -161,17 +161,52 @@ P(A' \, \textrm{stable}\, \big| \, A \, \textrm{stable})
 $$
 where $A'$ represents a matrix derived from some perturbation applied to the matrix $A$ given above. In the simple case where $A \in \mathbb{R}^{n \times n}$ the perturbation which involves sampling uniformly over the $a_{ij}$ defining $A$ the value of a particular $a_{ij}$ from a given probability distribution.
 
+\section{Component decomposition and robustness}
+
+The decomposition of a digraph into strongly connected components 
+corresponds to a block triangular decomposition of matrices
+describle by that digraph.  Say that the graph $G$ has strongly
+connected components $C_1, C_2, \ldots C_n$, which have been
+labelled in such a way that there are no links from vertices in
+component $C_i$ to component $C_j$ when $i < j$.  Label the
+vertices in such a way that $v_1, v_{n_1}$ belong to $C_1$,
+$v_1, v_{n_1}$ belong to $C_2$, etc.  Then if $M$ is a matrix
+consistent with $G$, it must be block triangular.  [explain better]
+
+An important consequence of this is that edges which go between
+different strongly connected components do not contribute to
+determining stability.  Hence, if we resample a matrix entry
+corresponding to such an edge, the conditional probability 
+of the matrix remaining stable upon resampling is 1.  Hence, if
+our graph $G$ has strongly connected components $C_1, C_2, \ldots C_n$
+where $C_i$ has $v_i$ vertices and connectivity $c_1$ and there
+are $\ell_{ij}$ links between components $i$ and $j$, then the
+total robustness to resampling a random entry is
+\[
+R(G) = \frac{\sum_{i=1}^n \sum_{j=1}^n \ell_{ij} + \sum_{i=1}^n c_i R_i}
+            {\sum_{i=1}^n \sum_{j=1}^n \ell_{ij} + \sum_{i=1}^n c_i}
+\]
+            
+\[
+R_{\mathrm{max}} = \frac{\frac{1}{2} ((\sum_i n_i)^2 - \sum_i n_i^2) + \sum_i c_i R_i}
+            {\frac{1}{2} ((\sum_i n_i)^2 - \sum_i n_i^2) + \sum_i c_i}
+\]
+
 \section{Stability criteria}
+\todo{Since there is no point in publishing proofs of results contemporary
+with Darwin's Origin of Species, this section will be replaced with a
+reference to Gantmacher.}
 Suppose that $M$ is an $n \times n$ matrix with real coefficients.
-Motivated by the discussion of \ref{sec:stabanalbn}, we will call
+As described in \ref{sec:stabanalbn}, we call
 the matrix $M$ stable if all its eigenvalues have negative real part.
 Define the characteristic polynomial as $\chi(M)(z) = \det(zI - M)$.
 Denote the coefficients of $\chi(M)$ as $s_j$ and its roots as $r_j$,
 writing $p(x) = x^n + \sum_{k=1}^n s_k x^{n-k} = \prod_{k=1}^n (x-r_k)$.
 Then, since the roots of $\chi$ are the eigenvalues of $M$, asking that
 $M$ be stable is equivalent to asking that the roots of $\chi$ all have
-negative real part.  We will formulate conditions for this to happen in
-terms of the coefficients of $\chi$.
+negative real part.  Hence, let us call a polynomial stable if all its
+roots have negative real part.  We will formulate conditions for this to 
+happen in terms of the coefficients of $\chi$.
 
 \begin{lemma}
 If $M$ is stable, then $s_i > 0$ for all $i$ between $1$ and $n$.
@@ -234,7 +269,67 @@ the root is complex, then having zero real part means that the root and
 its complex conjugate are purely imaginary and sum to zero, hence $\Delta = 0$.
 \end{proof}
 
+\begin{lemma} 
+If $n < 6$, then a polynomial $p$ is stable if and only
+if $\Delta > 0$ and $s_1 > 0$ for all $i$.
+\end{lemma}
+
+\begin{proof}
+Suppose that, to the contrary, there exists a polynomial which satisfies
+the inequalities $\Delta > 0$ and $s_1 > 0$ but which is not stable.
+Consider a straight line connecting this polynomial to a stable polynomial,
+say $(x - 1)^n$.
+
+Suppose that $p$ is a polynomial for which $\Delta = 0$ and $s_i > 0$ but
+which is not on the boundary of the stable region.  In order to have 
+$\Delta = 0$, we must either have a pair of real roots which sum to zero 
+or a pair of complex conjugate roots with zero real part.  In the former
+case, we would have $x^2 - r^2$ as a factor of our polynomial and in the
+latter, we would have $x^2 + r^2$ as a factor.
+
+Suppose that $x^2 - r^2$ is a factor.  Then we have
+\[
+p = (x^2 - r^2) \left(x^{n-2} + \sum_{k=1}^{n-3} c_k x^{n-k-2} \right) =
+x^n + \sum_{k=3}^{n-3} (c_k - r^2 c_{k-2}) x^{n-k} + 
+\]
+
+Suppose that $x^2 + r^2$ is a factor. Then we have one of the following
+when $2 < n < 6$
+\begin{align*}
+(x^2 + r^2)(x + a_1) &=
+x^3 + a_1 x^3 + r^2 x^2 + a_1 r^2 \\
+(x^2 + r^2)(x^2 + a_1 x + a_2) &=
+x^4 + a_1 x^3 + (a_2 + r^2) x^2 + a_1 r^2 x + a_2 r^2 \\
+(x^2 + r^2)(x^3 + a_1 x^2 + a_2 x + a_3) &=
+x^5 + a_1 x^4 + (a_2 + r^2) x^3 + (a_3 + a_1 r^2) x^2 + a_2 r^2 x + a_3 r^2
+\end{align*}
+Inspecting these, we see that, if the coefficients of $p$ are positive,
+then $a_i > 0$ for all $i$.
+
+$\ldots$
+\end{proof}
+
+For $n = 6$, this argument breaks down because, for instance, we have
+the polynomial $x^6 + x^5 +\frac{1}{2} x^4 + 2x^3 + \frac{1}{2} x^2 +
+x + 1$  which factors as  $(x^2 + 1)(x^4 + x^3 - \frac{1}{2} x^2 + x + 1)$.
+This polynomial has positive cofficients and $\Delta = 0$ but does not
+lie on the boundary of the stable region because the second factor has
+a negative coefficient, hence has a root with positive real part.  Thus,
+for $n = 6$ and higher, we need to supplement our conditions with
+additional inequalities (which may be taken to be linear) to exclude
+such possibilitiies.  However, we will not pursue this topic further
+in this work because we will only be making computations with matrices
+of size less than $6$.
+
 \section{Paths and eigenvalues}
+\todo{I am thinking that we might want to jettison this section from
+the published version and leave it as private notes for future work.
+As a substitute for the published version, I made a section in front 
+of it which takes a more direct route to proving what is needed for
+the purposes of showing that the characteristic polynomial factors and
+making our arguments about total orders being the most stable.  We
+should discuss this point tomorrow.}
+
 Next, we will want to relate prpoperties of our matrix and its eigenvalues
 to  properties of the associated graph $G_A$.  To do this, we will first
 examine the category of paths on $G_A$, and derive a formula expressing
@@ -262,7 +357,7 @@ weights on edges correspond to matrix entries and, given a path
 $v_1, v_2, v_3 \ldots$, we have $\wprod(v_1, v_2, v_3 \ldots) =
 m_{v_1 v_2} m_{v_2 v_3} \cdots$.  Going in the opposite direction, we
 note that any functor from $\Path(G)$ to $\mathbb{R}$ may be regarded as
-a weighted product for a suitable choice of weights.  We extend $\wp$ to
+a weighted product for a suitable choice of weights.  We extend $\wprod$ to
 $\mathcal{A}(G)$ by linearity; the result is an algebra homomorphism.
 
 \todo{Start talking about Abelianizing the category and the algebra, say
@@ -327,11 +422,11 @@ $\chi(z) = z^3−m_{11} z^2 - m_{13} m_{31} z - m_{12} m_{23} m_{31}$.
 finally, we note that this polynomial is indeed the characteristic
 polynomial of the matrix
 \[
- \begin{matrix}
+ \begin{pmatrix}
    m_{11} & m_{12} & m_{13} \\
    0      & 0      & m_{23} \\
    m_{31} & 0      & 0 \\
- \end{matrix}
+ \end{pmatrix}
 \]
 corresponding to our digraph.
 
